# wowdata

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: check_pipeline.py  core.py  countries.csv  example.pipeline.yaml  example_cast.py  example_cast_missing_col.py  example_derive.py  example_drop.py  example_filter.py  example_filter_teaching_error.py  example_ir_rtt.py  example_join.py  example_pipeline.yaml  example_select.py  example_usage.py  example_validate.py  example_validation.py  interactive1.ipynb  people_bad.csv  schema_inferencer.py  semantic_checker.py  static_checker.py  wowdata.pipeline.schema.json
wowdata/: __init__.py  errors.py  pyproject.toml  schema.py  util.py
wowdata/models/: pipeline.py  sinks.py  sources.py  transforms.py
wowdata/tests/: __init__.py  test_pipeline.py  test_sinks.py  test_sources.py  test_transforms.py
wowdata/tests/data/: people.csv  people_ok.csv
wowdata/tests/examples/: example_cast.py  example_cast_missing_col.py  example_derive.py  example_drop.py  example_filter.py  example_filter_teaching_error.py  example_ir_rtt.py  example_join.py  example_select.py  example_usage.py  example_validate.py  example_validation.py
